lists are now filterable and sortable

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,16 @@ legend {
   margin:0px;
 }
 
+/**
+ * overwrite tablesorter bootstrap theme
+ */
+
+.tablesorter-bootstrap:not(.table-inverse) thead:not(.thead-inverse) .tablesorter-header,
+.tablesorter-bootstrap:not(.table-inverse) tfoot th,
+.tablesorter-bootstrap:not(.table-inverse) tfoot td {
+  background-color: transparent;
+}
+
+.tablesorter-bootstrap:not(.table-inverse) .tablesorter-filter-row {
+  background-color: transparent;
+}
