responsive google maps iframe

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,21 @@ legend {
   margin:0px;
 }
 
+.mapscontainer {
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+
+.mapscontainer iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+
 /**
  * overwrite tablesorter bootstrap theme
  */
